[DWP-WEB] Fixed spacing issues

--- a/index.css
+++ b/index.css
@@ -9,7 +9,7 @@
    background: rgba(17, 17, 17, 0.93);
    color: white;
    height: 300px;
-   width:250px
+   width:300px
 }
 #textbox{
   height:35px;
